Renamed clustering service, cleanup

--- a/backend/Simple Iris Model.ipynb
+++ b/backend/Simple Iris Model.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iris Plants Database\n",
+      "cluster Plants Database\n",
       "====================\n",
       "\n",
       "Notes\n",
@@ -23,9 +23,9 @@
       "        - petal length in cm\n",
       "        - petal width in cm\n",
       "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
+      "                - cluster-Setosa\n",
+      "                - cluster-Versicolour\n",
+      "                - cluster-Virginica\n",
       "    :Summary Statistics:\n",
       "\n",
       "    ============== ==== ==== ======= ===== ====================\n",
@@ -43,16 +43,16 @@
       "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
       "    :Date: July, 1988\n",
       "\n",
-      "This is a copy of UCI ML iris datasets.\n",
-      "http://archive.ics.uci.edu/ml/datasets/Iris\n",
+      "This is a copy of UCI ML cluster datasets.\n",
+      "http://archive.ics.uci.edu/ml/datasets/cluster\n",
       "\n",
-      "The famous Iris database, first used by Sir R.A Fisher\n",
+      "The famous cluster database, first used by Sir R.A Fisher\n",
       "\n",
       "This is perhaps the best known database to be found in the\n",
       "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
       "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
       "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
+      "type of cluster plant.  One class is linearly separable from the other 2; the\n",
       "latter are NOT linearly separable from each other.\n",
       "\n",
       "References\n",
@@ -81,11 +81,11 @@
     "from sklearn import svm\n",
     "from sklearn import datasets\n",
     "\n",
-    "# read iris dataset\n",
-    "iris = datasets.load_iris()\n",
-    "X, y = iris.data, iris.target\n",
+    "# read cluster dataset\n",
+    "cluster = datasets.load_cluster()\n",
+    "X, y = cluster.data, cluster.target\n",
     "\n",
-    "print(iris['DESCR'])\n",
+    "print(cluster['DESCR'])\n",
     "\n",
     "# fit model\n",
     "clf = svm.SVC(\n",
